@@ -17,7 +17,7 @@ pm-titanium-ore=Titanium ore
 pm-tungsten-ore=Tungsten ore
 pm-palladium-ore=Palladium ore
 pm-aluminium-ore=Aluminium ore
-pm-cadnium-ore=Cadnium ore
+pm-cadnium-ore=Cadmium ore
 pm-lead-ore=Lead ore
 pm-thallium-ore=Thallium ore
 pm-tellurium-ore=Tellurium ore
@@ -65,7 +65,6 @@ pm-bismite=Bismite
 pm-zirconium-sand=Zirconium sand
 pm-zircon=Zircon
 pm-zirconia=Zirconia
-pm-zirconium=Zirconium
 pm-zirconium-pants=Zirconium pants
 pm-mixed-ore-slag=Mixed ore slag
 pm-polonium-210=Polonium-210
@@ -81,7 +80,7 @@ pm-caesium-antimony-chloride=Caesium antimony chloride
 pm-caesium-hexachlorocerate=Caesium hexachlorocerate
 pm-caesium-chloride=Caesium chloride
 pm-iodine=Iodine
-pm-antimony=Antimony
+pm-antimony-ore=Antimony ore
 pm-lithium-chloride=Lithium chloride
 pm-lithium-bromide=Lithium bromide
 pm-30-rubidium-alum=30% purity rubidium alum
@@ -112,7 +111,7 @@ pm-fluid-integrated-circuit-mold=Fluid-resistant integrated circuit mold
 pm-advanced-integrated-circuit-mold=Advanced integrated circuit mold
 pm-basic-breadboard-mold=Basic breadboard mold
 pm-fluid-breadboard-mold=Fluid-resistant breadboard mold
-pm-advanced-breadboard-mold=Basic breadboard mold
+pm-advanced-breadboard-mold=Advanced breadboard mold
 pm-advanced-integrated-circuits=Advanced intergrated circuits
 pm-advanced-circuit-breadboard=Advanced circuit breadboard
 pm-transistors=Transistors
@@ -128,7 +127,6 @@ pm-red-mercury=Red mercury powder
 pm-ferrum=Ferrum
 pm-patina=Patina
 pm-silica=Silica
-pm-cinnabar=Cinnabar
 pm-chalk=Chalk
 pm-heating-plating=Heat-resistant plating 
 pm-cooling-plating=Cold-reistant plating 
@@ -143,9 +141,9 @@ pm-catalyst-container=Catalyst container
 pm-palladium-hydride=Palladium Hydride
 pm-calcium-dust=Calcium Carbonate dust
 pm-molybdenite-powder=Molybdenite powder
-pm-fluid-breadboard=Fluid Resistant breadboard
-pm-fluid-integrated-circuits=Fluid Resistant Integrated Circuits
-pm-fluid-circuit=Fluid Resistant circuit
+pm-fluid-breadboard=Fluid resistant breadboard
+pm-fluid-integrated-circuits=Fluid resistant integrated circuits
+pm-fluid-circuit=Fluid resistant circuit
 pm-sea-salt=Sea salt
 pm-basic-panelling=Basic Panelling
 pm-lightweight-panelling=Lightweight Panelling
@@ -168,7 +166,6 @@ pm-chlorine-air-filter=Chlorine Air filter
 pm-carbon-dioxide-air-filter=Carbon Dioxide Air filter
 pm-trace-gas-air-filter=Trace gas Air filter
 pm-module-case=Module casing
-pm-module-light=Module lights
 pm-battery-casing=Battery casing
 pm-vanadium-oxide=Vanadium-oxide
 pm-solder=Solder
@@ -207,7 +204,6 @@ pm-module-productivity-light=Productivity module lights
 pm-module-efficiency-light=Efficiency module lights
 pm-polymethyl-methacrylate=Polymethyl methacrylate (PMMA)
 pm-plastic-science-mold=Plastic science mold
-pm-filled-plastic-mold=Filled plastic science mold
 pm-copper-zinc-aluminium-catalyst=Copper-Zinc-Aluminium catalyst (CuZnAl)
 pm-plastic-science-bottle=Plastic science bottle
 pm-filled-plastic-science-mold=Filled plastic science mold
@@ -236,7 +232,7 @@ pm-solder-plate=Solder plate
 pm-aluminium-plate=Aluminium plate
 pm-titanium-plate=Titanium plate
 pm-tungsten-plate=Tungsten plate
-pm-cadnium-plate=Cadnium plate
+pm-cadnium-plate=Cadmium plate
 pm-palladium-plate=Palladium plate
 pm-lead-plate=Lead plate
 pm-thallium-plate=Thallium plate
@@ -439,7 +435,7 @@ pm-molten-steel=Molten Steel
 pm-molten-stainless-steel=Molten Stainless Steel
 pm-molten-brass=Molten Brass
 pm-molten-solder=Molten Solder
-pm-molten-cadnium=Molten Cadnium
+pm-molten-cadnium=Molten Cadmium
 pm-molten-tin=Molten Tin
 pm-molten-palladium=Molten Palladium
 pm-molten-lead=Molten Lead
@@ -854,7 +850,7 @@ pm-CO2-nullifying=CO2 nullifying
 pm-plastic-science-packs=Plastic Science bottles
 pm-science-center=Science center
 pm-trace-gas-refining=Trace gas refining
-pm-fluid-circuit=Fluid-resistant electronics
+pm-fluid-circuit=Fluid resistant electronics
 pm-washing-plant=Washing plant
 pm-pollution-filtering=Pollution air filtering
 pm-palladium-processing=Palladium processing
@@ -865,7 +861,7 @@ pm-chemical-resin=Chemical based resin
 pm-advanced-polyethylene-plastic=Advanced Polyethylene plastic production
 pm-molten-alloys=Molten Alloys
 pm-advanced-advanced-transition-metal-refining=Advanced-Advanced Transition Metal refining
-pm-fluid-circuit-molding=Fluid-resistant circuit molding
+pm-fluid-circuit-molding=Fluid resistant circuit molding
 pm-advanced-circuit-molding=Advanced circuit molding
 pm-anti-bacterial-multiproperty-multimetals=Anti-bacterial Multiproperty MultiMetals
 pm-vacuum-former=Vacuum forming machinery
@@ -1035,7 +1031,7 @@ pm-chemical-resin=By using more advanced techniques, you can synthesise specific
 pm-advanced-polyethylene-plastic=By using Bisphenol A as a base, more efficent methods of PE plastic can be achieved.
 pm-molten-alloys=Mixing metals and melting them simultaneously allows for more efficent alloy production.
 pm-advanced-advanced-transition-metal-refining=The next tier of Transitional Metal refining, allowing production of even stronger and advanced ores.
-pm-fluid-circuit-molding=An alternative way to making fluid-resistant circuits.
+pm-fluid-circuit-molding=An alternative way to making fluid resistant circuits.
 pm-advanced-circuit-molding=An alternative way to making advanced circuits.
 pm-anti-bacterial-multiproperty-multimetals=By using metals that have innate anti-bacterial effects, biological-based science and intermediates can be produced.
 pm-vacuum-former=A building that can be used to mold and form materials using resins or plastics.
