@@ -343,7 +343,7 @@ data:extend({
     },
     {
         type = "item",
-        name = "pm-antimony",
+        name = "pm-antimony-ore",
         icon_size = 64,
         icon = "__periodic-madness__/graphics/icons/ores/arsenic-ore-icon.png",
         subgroup = "pm-potassium-am",
